--- a/Day 2 Basic HTML/index1.html
+++ b/Day 2 Basic HTML/index1.html
@@ -18,11 +18,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body>
-    <div class="squareJ">
-        <p class="textJ">J</p> 
-    </div>
-    <div class="jasonstroff">
-        <p>JASON STROFF</p>
-    </div>
+      <div class="squareJ">
+        <p class="textJ">J</p>
+      </div>
+  
+      <div class="jasonstroff">
+        <div>JASON STROFF</div>
+      </div>
   </body>
 </html>
